# hf-daily-papers-tg

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: daily_papers.yaml  daily_posts.yaml  keepalive.yaml  weekly_papers.yaml  weekly_trends.yaml
src/hf_daily_papers_tg/: settings.py
src/hf_daily_papers_tg/commands/: daily_papers.py  daily_posts.py  error_message.py  weekly_papers.py  weekly_trends.py
src/hf_daily_papers_tg/models/: _escape.py  papers.py  posts.py  trending.py
src/hf_daily_papers_tg/parsers/: http_utils.py  papers.py  posts.py  trending.py
